# CyberAsio-Core

./: .gitignore  README.md  index.html  metadata.json  package-lock.json  package.json
cpp-backend/: BUILD.md  CMakeLists.txt
cpp-backend/include/: audio_engine.h  config_manager.h  device_manager.h  webserver.h
cpp-backend/src/: audio_engine.cpp  config_manager.cpp  device_manager.cpp  main.cpp  webserver.cpp
cpp-backend/static/: index.html
cpp-backend/static/src/: app.component.ts
docs/: README.md
src/: app.component.css  app.component.html  app.component.ts
